--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 
 <title>Welcome to the Matstract Materials Abstract Database</title>
 
-
 {% block content%}
 
 <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
 
 {% endblock %}
 
-<!doctype html>
-
-{% if name %}
+{% if nabstracts %}
   <h1>There are {{ nabstracts }} in the Matstract database.</h1>
 {% else %}
   <h1></h1>
